--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "^0.0.1",
     "@angular/animations": "^15.2.0",
     "@angular/cdk": "^15.2.7",
     "@angular/common": "^15.2.0",
@@ -21,8 +22,10 @@
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
     "bootstrap": "^5.3.0",
+    "buffer": "^6.0.3",
     "jquery": "^3.7.0",
     "rxjs": "~7.8.0",
+    "save": "^2.9.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
